Fixed: Bug 29611 - imap folder subscribe dialog distorted
Due to floating problems in firefox, we moved the checkbox to the front.

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -2171,6 +2171,15 @@ input.nice-input {
                 }
             }
         }
+
+        .subscribe-wrapper {
+            display: inline-block;
+            padding: 0 4px;
+
+            input {
+                margin: 0;
+            }
+        }
     }
 
     // more space for fat fingers
